# active-call

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  README.md  active-call.example.toml
.github/workflows/: docker-image.yml
config/playbook/: hello.md
docs/: README.md  api.md  config_guide.en.md  config_guide.zh.md  playbook_advanced_features.en.md  playbook_advanced_features.md  playbook_tutorial.en.md  playbook_tutorial.zh.md  sip_variable_system.md  twilio_integration.md
examples/: export_vad_weights_jit.py  process_audio.py  process_audio.rs
fixtures/: .gitignore
src/: app.rs  config.rs  event.rs  lib.rs  main.rs
src/call/: active_call.rs  mod.rs  sip.rs
src/handler/: handler.rs  playbook.rs
src/media/: asr_processor.rs  engine.rs  mod.rs  negotiate.rs  processor.rs  realtime_processor.rs  recorder.rs  stream.rs  volume_control.rs
src/media/tests/: denoiser.rs  media_pass.rs  mod.rs  perf_analysis.rs  perf_rtp_recorder.rs  recorder.rs  recorder_rtp.rs  stream.rs  tts_track.rs  webrtc_track.rs
src/media/track/: file.rs  media_pass.rs  mod.rs  rtc.rs  track_codec.rs  tts.rs  websocket.rs
src/media/vad/: benchmark_all.rs  mod.rs  simd.rs  tests.rs  tiny_silero.rs  tiny_ten.rs
src/offline/: config.rs  downloader.rs  mod.rs
src/offline/sensevoice/: encoder.rs  frontend.rs  mod.rs  tokenizer.rs
src/offline/supertonic/: config.rs  mod.rs  model.rs  processor.rs  ref.md  tts.rs
src/playbook/: handler.rs  mod.rs  runner.rs
src/playbook/handler/: mod.rs  provider.rs  rag.rs  tests.rs  types.rs
src/synthesis/: aliyun.rs  mod.rs  supertonic.rs  tencent_cloud.rs  tencent_cloud_basic.rs  tests.rs
src/transcription/: aliyun.rs  mod.rs  sensevoice.rs  tencent_cloud.rs  tests.rs
src/useragent/: invitation.rs  mod.rs  playbook_handler.rs
static/: index.html
tests/: asr_pause_resume_test.rs  call_tests.rs  multi_scene_test.rs  offline_integration_test.rs  playbook_runner_tests.rs  playbook_tests.rs  sip_integration_test.rs  sip_ssrc_change_test.rs  useragent_tests.rs  webrtc_vad_link_test.rs
